IncidenceFetchJob: don't get stuck when no calendar collections exist

The job never emitted finished() when the CollectionFetchJob returned no
collections. This causes KMail to get stuck when user opens an invitation
without having any calendar resource set up.

BUG: 297930
FIXED-IN: 4.14.4